Fixed the routing error in which cst362 was available on local deployment but on online deployment it become unaccesible, it was due to some form of case issue fixed the header small alignment issue on mobiles screens added a contribute page fixed the color on footer

--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -1,5 +1,5 @@
 footer {
-    background-color: #2BAE66;
+    background-color: var(--pacha);
     display: flex;
     flex-direction: column;
     padding: 1.2rem;
