--- a/src/components/header.css
+++ b/src/components/header.css
@@ -21,7 +21,7 @@
   display: flex;
   flex-direction: row;
 
-  justify-content: center;
+  /*justify-content: center;*/
   align-items: center;
   gap: 0.5rem;
   min-width: 0;
